fixed layout issue topAbout component

--- a/src/app/components/top-about/top-about.component.scss
+++ b/src/app/components/top-about/top-about.component.scss
@@ -6,10 +6,6 @@ $very-light-grey: #EEEFF4;
 $red: #DF5656;
 $font: 'Spartan',
 sans-serif;
-
-
-
-
 //----------------Top section pages:About and Contact ---------------
 .top-section-cont {
     padding: 2% 7% 5% 10%;
@@ -19,9 +15,8 @@ sans-serif;
         }
         img {
             @media screen and (max-width: 1081px) {
-                width: 160% !important;
+                width: 160%;
             }
-            width: 120%;
         }
     }
     .text-col {
@@ -29,7 +24,7 @@ sans-serif;
             position: absolute;
             left: 42%;
             top: 40% !important;
-            padding: 13% 7% 12% 10% !important;
+            padding: 13% 7% 12% 10%;
         }
         @media screen and (min-width: 757px) {
             position: absolute;
@@ -48,7 +43,7 @@ sans-serif;
             }
             font-size: 150px;
             font-family: sans-serif;
-            font-weight: 400 ;
+            font-weight: 300;
             color: $very-light-grey;
             padding-left: 17%;
             @media screen and (max-width: 756px) {
@@ -62,17 +57,10 @@ sans-serif;
             font-size: 56px;
             font-weight: 300;
             letter-spacing: -0.2rem;
-            @media screen and (min-width:1080px){
-                padding-right: 15%;
-            }
-            
         }
         p {
             font-size: 16px;
-            padding-top: 25px;
-            @media screen and (min-width:1080px){
-                padding-right: 30%;
-            }
+            padding-top: 15px;
         }
     }
 }
